ajuste solicitado pelo sonar